--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "main": "index.js",
   "repository": "https://github.com/heathryu/name-contests-graphql.git",
   "author": "Heath Ryu",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2"
+  }
 }
