--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
   "repository": "https://github.com/heathryu/name-contests-graphql.git",
   "author": "Heath Ryu",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon lib/index"
+  },
   "devDependencies": {
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "nodemon": "^1.19.1",
     "prettier": "^1.18.2"
+  },
+  "dependencies": {
+    "graphql": "^14.4.2"
   }
 }
