--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
     "graphql": "^14.4.2"
   }
 }
