--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "pg": "^7.11.0"
   }
 }
