--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.2",
+    "humps": "^2.0.1",
     "pg": "^7.11.0"
   }
 }
