--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "db:down": "docker-compose -f docker/docker-compose-databases.yml down -v --rmi all"
   },
   "devDependencies": {
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "nodemon": "^1.19.1",
-    "prettier": "^1.18.2"
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5"
   },
   "dependencies": {
     "assert": "^2.0.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.8.0",
-    "graphql": "^14.4.2",
+    "express-graphql": "^0.9.0",
+    "graphql": "^15.0.0",
     "humps": "^2.0.1",
-    "mongodb": "^3.3.0-beta2",
-    "pg": "^7.11.0"
+    "mongodb": "^3.5.7",
+    "pg": "^8.2.1"
   }
 }
